# code_tasks

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md
1197/: a.out
1203/: A.cpp  B.cpp  a.out
1204/: A.cpp  B.cpp  C.cpp
1206/: A.cpp  C.cpp
1207/: A.cpp  B.cpp  C.cpp
1208/: A.cpp
1213/: A.cpp  C.cpp
1216/: A.cpp
1228/: B.cpp
1230/: A.cpp
1316/: A.cpp  B.cpp
c++/: README.md  cf_example.cpp
c++/1197/: A.cpp
c++/1200/: A.cpp
c++/1204/: C.cpp
c++/1206/: B.cpp
c++/1208/: B.cpp  C.cpp
c++/1213/: B.cpp
c++/1216/: B.cpp  D.cpp
c++/1228/: A.cpp
c++/1230/: B.cpp  C.cpp
c++/1401/: B.cpp  dfs.cpp
c++/1511/: b.cpp  c.cpp
c++/1514/: a.cpp  b.cpp  c.cpp
c++/1516/: a.cpp  b.cpp
c++/1517/: a.cpp  b.cpp
c++/1523/: a.cpp  b.cpp
c++/1526/: a.cpp  b.cpp  c.cpp
c++/stepik/haffman/: 3425.cpp
c++/tasks/: 1498_a.cpp  1506_a.cpp  1506_b.cpp  1506_c.cpp
cf/1534/: a.cpp  b.cpp
cf/1537/: a.cpp  b.cpp  c.cpp
cf/1538/: a.cpp  b.cpp  c.cpp
java/: .gitignore
java/src/main/java/codeforces/: AtCoderTemplate.java  CodeForcesTemplate.java  aTemplate.java
java/src/main/java/codeforces/example/: Example.java
java/src/main/java/cses/: p1068.java  p1069.cpp  p1070.cpp  p1071.cpp  p1083.cpp  p1083.java  p1092.cpp  p1094.cpp
java/src/main/java/test/: A.java  BankAccount.java  Task19.java  Test.java  Test10.java  Test11.java  Test12.java  Test13.java  Test14.java  Test15.java  Test16.java  Test17.java  Test18.java  Test2.java  Test3.java  Test4.java  Test5.java  Test6.java  Test7.java  Test9.java  TestBytecode.java
vlada/: B.cpp
(+558 files in other folders)
